# connections

./: .gitignore  .ocamlformat  AGENTS.md  MIGRATION_PLAN.md  README.md  TODO.md  dune-project
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.ona/: automations.yaml
clients/raycast/: CHANGELOG.md  README.md  package-lock.json  package.json
clients/raycast/src/: connections.tsx  create-article.tsx  unread-count.tsx
docs/: article.md  category.md  feed.md  import.md  macos-daemon-installation.md  metadata-extraction.md  person.md  tag.md
opam/: connections-server.opam
scripts/: com.connections.server.plist  connections-server.newsyslog.conf  install-daemon.sh  uninstall-daemon.sh
server/: README.md
server/lib/: db.ml  dune  feed_fetcher.ml  feed_fetcher.mli  feed_parser.ml  feed_parser.mli  handler_utils.ml  handlers.ml  html_text.ml  html_to_markdown.ml  html_to_markdown.mli  http_client.ml  http_client.mli  og_fetcher.ml  og_fetcher.mli  opml_import.ml  opml_parser.ml  person.ml  router.ml  router.mli  rss_feed.ml  scheduler.ml  scheduler.mli
server/lib/cron/: article_metadata.ml  article_metadata_sync.mli  feed_sync.ml  feed_sync.mli  uri_metadata_sync.ml  uri_metadata_sync.mli
server/lib/db/: article.ml  article.mli  article_content.ml  article_content.mli  category.ml  connection.ml  connection.mli  connection_metadata.ml  dune  pool.ml  (+18 more)
server/test/: dune  e2e_helpers.ml  test_article.ml  test_connection.ml  test_e2e.ml  test_feed_fetcher.ml  test_feed_parser.ml  test_helpers.ml  test_main.ml  test_metadata.ml  test_opml_parser.ml  test_person.ml  test_rss_feed.ml  test_uri.ml  test_url_metadata.ml  test_utils.ml
server/test/data/: Feeds.opml  test.db
server/test/data/snapshots/: articles.json  articles_1.json  connections.json  connections_8.json  feeds.json  feeds_2.json  persons.json  persons_8.json  tags.json  uris.json  uris_1.json
(+160 files in other folders)
